test/sema/generic-arg-infer-conflict-2.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(uint a) {
    // CHECK: [[@LINE+1]]:22: error: couldn't infer generic parameter 'T' of 'Range' because of conflicting argument types 'float' and 'uint'
    for (var i in 0.0..a) {}
}
